2006-06-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/headers/mpsub.txt:
	* lib/gaupol/base/cons.py:
	* lib/gaupol/base/delegate/fileopen.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/delegate/stat.py:
	* lib/gaupol/base/delegate/test/test_format.py:
	* lib/gaupol/base/file/__init__.py:
	* lib/gaupol/base/file/classes.py:
	* lib/gaupol/base/file/mpl2.py:
	* lib/gaupol/base/file/mpsub.py:
	* lib/gaupol/base/file/ssa.py:
	* lib/gaupol/base/file/subviewer2.py:
	* lib/gaupol/base/tags/__init__.py:
	* lib/gaupol/base/tags/classes.py:
	* lib/gaupol/base/tags/mpsub.py:
	* lib/gaupol/base/tags/test/test_init.py:
	* lib/gaupol/gtk/delegate/filesave.py:
	* lib/gaupol/gtk/delegate/format.py:
	* lib/gaupol/gtk/dialog/header.py:
	* lib/gaupol/gtk/dialog/test/test_header.py:
	* tools/pylint:
	  Added support for MPsub.

2006-06-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/cons.py:
	  Unmarked some names translatable.

2006-06-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/main.py:
	  Do not fail on SyntaxError with Python 2.3.

	* tools/hide:
	* tools/list-glade:
	* tools/list-py:
	  New files.

	* tools/add-changelog:
	* tools/exec:
	* tools/profile:
	* tools/py.test:
	* tools/pydoc:
	* tools/pyenchant:
	* tools/pylint:
	* tools/status:
	* tools/translate:
	* tools/versions:
	  Revised.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/headers/microdvd.txt:
	* lib/gaupol/base/file/microdvd.py:
	* lib/gaupol/base/file/test/test_init.py:
	  Added support for MicroDVD headers.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/spellcheck.py:
	  Don't let amount of replacements exceed conf.spell_check.max_repl.

	* lib/gaupol/gtk/util/conf.py:
	  New option: spell_check.max_repl.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/releasing.txt:
	* po/README.translators:
	  Updated.

	* lib/gaupol/test/__init__.py:
	  Changed _SUBRIP_TEXT and _MICRODVD_TEXT.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
